
syntax = "proto3";
option csharp_namespace = "ProductApiServer";
import "google/protobuf/empty.proto";
package ProductApiServer;

service ProductGrpc {
 rpc GetProduct (GetProductRequest) returns (GetProductResponse);
 rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
 rpc ListProducts (google.protobuf.Empty) returns (ProductList);
 rpc ReserveProduct (ReserveProductRequest) returns (google.protobuf.Empty);
}

message GetProductRequest {
 string id = 1;
}

message GetProductResponse {
 string id = 1;
 string name = 2;
 double quantity = 3;
}

message CreateProductRequest {
  string name = 1;
  double quantity = 2;
}

message CreateProductResponse {
 string id = 1;
}

message ProductListResponse {
 string id = 1;
 string name = 2;
 double quantity = 3;
}

message ReserveProductRequest{
  double quantity = 1;
  string  id = 2;
}

message ProductList{
    repeated ProductListResponse productListResponse = 1;
}
